adjust to prevent overlap

--- a/dnd-app/frontend/src/assets/styles/SearchCard.css
+++ b/dnd-app/frontend/src/assets/styles/SearchCard.css
@@ -1,4 +1,4 @@
-div .card-img{
+div .search-img{
   height: 100px;
 	border-radius: 25px;
   width: 100px;
